crates/toml_edit/tests/fixtures/invalid/integer-leading-zero-neg.stderr
TOML parse error at line 1, column 18
  |
1 | leading-zero = -012
  |                  ^
Unexpected `1`
Expected `#`
